<resources>
    <!--Main Activity-->
    <string name="dice_roller_button">Dice Roller</string>
    <string name="create_character">Create Character</string>
    <string name="new_create_character">New Create  Character</string>
    <string name="load_character">Load Character</string>

    <string name="test_string">Test String</string>

    <!--Dice Roller Activity-->
    <string name="roll_result">Result</string>
    <string name="roll_total">Total</string>
    <string name="type_of_dice">Type of Dice</string>
    <string name="number_of_rolls">Number of Rolls</string>
    <string name="roll_button">Roll</string>

    <!--Character Creation Activity-->
    <string name="save_character">Save Character</string>

    <string name="proficiencyBonus">Proficiency Bonus</string>
    <string name="armourClass">Armour Class</string>
    <string name="armourClassShort">AC</string>
    <string name="speed">Speed</string>
    <string name="hitPoints">Hit Points</string>
    <string name="level">Level</string>
    <string name="xp">XP</string>
    <string name="characterName">Character Name</string>
    <string name="playerName">Player Name</string>
    <string name="dndClass">Class</string>
    <string name="background">Background</string>
    <string name="race">Race</string>
    <string name="alignment">Alignment</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="save">Save</string>


    <string name="armorProficiencies">Armor Proficiencies</string>
    <string name="weaponProficiencies">Weapon Proficiencies</string>
    <string name="toolProficiencies">Tool Proficiencies</string>

    <!--Array to store Types of Dice-->
    <string-array name="dice_array">
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>20</item>
    </string-array>

    <string-array name="race_array">
        <item>Human</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Gnome</item>
        <item>Half Elf</item>
        <item>Half Orc</item>
        <item>Halfling</item>
    </string-array>

    <string-array name="class_array">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Wizard</item>
    </string-array>

    <string-array name="alignment_array">
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>

    <string-array name="background_array">
        <item>Acolyte</item>
        <item>Charlatan</item>
        <item>Criminal</item>
        <item>Entertainer</item>
        <item>Folk Hero</item>
        <item>Guild Artisan</item>
        <item>Hermit</item>
        <item>Noble</item>
        <item>Outlander</item>
        <item>Sage</item>
        <item>Sailor</item>
        <item>Soldier</item>
        <item>Urchin</item>
    </string-array>

    <!--Other-->
    <string name="app_name">RollWithIt</string>
    <string name="title_activity_roller">RollerActivity</string>
    <string name="title_activity_create_character">CreateCharacter</string>
    <string name="title_activity_character_display">CharacterDisplayActivity</string>
    <string name="cancel">Cancel</string>
    <string name="enter_new_attribute">Enter new attribute value</string>
    <string name="enter_new_detail">Enter new character detail</string>
    <string name="enter_new_stat">Enter new stat</string>
    <string name="new_value">New Value</string>

    <string name="title_activity_character_dice_roller">CharacterDiceRoller</string>
    <string name="roll_attributes">Roll Attributes</string>

    <string name="numberOne">1</string>
    <string name="d4Dice">4</string>
    <string name="numberZero">0</string>
    <string name="NumberOfDiceShorthand">Nbr</string>
    <string name="die">Die</string>
    <string name="modifier">Modifier</string>
    <string name="results">Results</string>
    <string name="diceRoller">Extra Dice Roller</string>
    <string name="create_random_character_label">Create Random Character</string>
    <string name="settings_label">Settings</string>
    <string name="blank_menu_item_label">Blank</string>
    <string name="auto_fill_label">Auto Fill</string>
    <string name="initiative">Initiative</string>
    <string name="title_activity_new_character_creation">newCharacterCreation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
